--- a/manifests/1.13.0/nim/baidu/paddleocr.yaml
+++ b/manifests/1.13.0/nim/baidu/paddleocr.yaml
@@ -1,50 +1,13 @@
 schema_version: '2.0'
 profile_selection_criteria: auto
 model: baidu/paddleocr
-release: 1.5.0
+release: 1.4.0
 profiles:
-- id: 49049986fc9bf66bc3674dd5ff7953472d7ec6ae82a64b74b8d33d3e8c077391
+- id: 26c97e9919dae5405145446f00e0189f615ce682526ec9b6da88b5138ff8097d
   tags:
     backend: triton
     batch_size: '32'
-    device_id: 27b8:10de
-    gpu: NVIDIA L4
-    gpu_key: l4
-    model_type: tensorrt
-    precision: fp16
-  workspace:
-    files:
-      paddle/1/checksums.blake3:
-        uri: ngc://nim/baidu/paddleocr:2_TRT_python_2?file=checksums.blake3
-        checksum: blake3:c9351fe2a49173300e4303bdce5890e1245fd1d33d767f32bd6b89357d74c1cd
-      paddle/1/model.py:
-        uri: ngc://nim/baidu/paddleocr:2_TRT_python_2?file=model.py
-        checksum: blake3:5fec05dfaf1f6d2e5bd97bb0d3828af95bd889e9de6be9d7ce88ca7f913babeb
-      paddle_det/1/checksums.blake3:
-        uri: ngc://nim/baidu/paddleocr:l4x1-trt-fp16-fswetrkejq?file=checksums.blake3
-        checksum: blake3:7182fe285af9ab18c14b20fc6bce7aeddd73e7e8642f9fc0589e8656fb2fa99b
-      paddle_det/1/metadata.json:
-        uri: ngc://nim/baidu/paddleocr:l4x1-trt-fp16-fswetrkejq?file=metadata.json
-        checksum: blake3:495231929fab32c9a8fbf59778a2311c46872cfa539ea27a85bc957e2eadf77f
-      paddle_det/1/model.plan:
-        uri: ngc://nim/baidu/paddleocr:l4x1-trt-fp16-fswetrkejq?file=model.plan
-        checksum: blake3:fc4807600041caa7a18ce339331c9acdf60d4471288931242983ee71ac2c03dd
-      paddle_rec/1/checksums.blake3:
-        uri: ngc://nim/baidu/paddleocr:l4x1-trt-fp16-ymwspsdwrw?file=checksums.blake3
-        checksum: blake3:6728b540aaf942c952853ac154254133c7bb4d5d6a6f970dbee84572bc3fbca9
-      paddle_rec/1/metadata.json:
-        uri: ngc://nim/baidu/paddleocr:l4x1-trt-fp16-ymwspsdwrw?file=metadata.json
-        checksum: blake3:495231929fab32c9a8fbf59778a2311c46872cfa539ea27a85bc957e2eadf77f
-      paddle_rec/1/model.plan:
-        uri: ngc://nim/baidu/paddleocr:l4x1-trt-fp16-ymwspsdwrw?file=model.plan
-        checksum: blake3:337caf25c1c0ef8e5c361e44ceca10ea2f9c59aa752cbde682485773360c566a
-- id: 495980e0b97395173bd2ddce9f7dec2851c654643e3bdb91c4d8fc24047c4d6a
-  tags:
-    backend: triton
-    batch_size: '32'
-    device_id: 20b2:10de
-    gpu: NVIDIA A100-SXM4-80GB
-    gpu_key: a100-sxm4-80gb
+    gpu: a100-sxm4-80gb
     model_type: tensorrt
     precision: fp16
   workspace:
@@ -73,13 +36,11 @@ profiles:
       paddle_rec/1/model.plan:
         uri: ngc://nim/baidu/paddleocr:a100x1-trt-fp16-ebu61zavqq?file=model.plan
         checksum: blake3:c94852ea911a0251046569da5b7ef92822caa00856d57cc065c129b00f36f79e
-- id: 5c2af3e6451d4087fa274ab38bca77845fbb8e0577c176407511154869d2fe26
+- id: 2e7da4417b1c44978e00f67823ae7ec885edb310e34c2c18464fbd6cad345065
   tags:
     backend: triton
     batch_size: '32'
-    device_id: 2321:10de
-    gpu: NVIDIA H100 NVL
-    gpu_key: h100-nvl
+    gpu: h100-nvl
     model_type: tensorrt
     precision: fp16
   workspace:
@@ -108,13 +69,11 @@ profiles:
       paddle_rec/1/model.plan:
         uri: ngc://nim/baidu/paddleocr:h100x1-trt-fp16-nctrcxvjdg?file=model.plan
         checksum: blake3:44f38d402f397e63cad058c84e716fa2d1529c148588673f35b34941795619c8
-- id: 631c6b6c76996d8cc04cf7cfde63d15d1b5f57cb323dc129f2a838b35703f1d9
+- id: 6097695b532c9abe549de9918de6b4702eda625f27b508acd7b7dcc04f38ebe1
   tags:
     backend: triton
     batch_size: '32'
-    device_id: 26b9:10de
-    gpu: NVIDIA L40S
-    gpu_key: l40s
+    gpu: h100-hbm3-80gb
     model_type: tensorrt
     precision: fp16
   workspace:
@@ -126,65 +85,28 @@ profiles:
         uri: ngc://nim/baidu/paddleocr:2_TRT_python_2?file=model.py
         checksum: blake3:5fec05dfaf1f6d2e5bd97bb0d3828af95bd889e9de6be9d7ce88ca7f913babeb
       paddle_det/1/checksums.blake3:
-        uri: ngc://nim/baidu/paddleocr:l40sx1-trt-fp16-evboykuf0g?file=checksums.blake3
-        checksum: blake3:9875387ccc5b5995777214de008275eaa2fa3f943b1bd7e137ec306eafc347c4
+        uri: ngc://nim/baidu/paddleocr:h100x1-trt-fp16-uswjt0qwaa?file=checksums.blake3
+        checksum: blake3:d356a11dae9cda2e2fba4a3c35a5c4d437bd74da07a0ccbfb0a91eb9995f5167
       paddle_det/1/metadata.json:
-        uri: ngc://nim/baidu/paddleocr:l40sx1-trt-fp16-evboykuf0g?file=metadata.json
-        checksum: blake3:c4679fb3139affd30b4fdc16bbefede0974265778cc52ce61564cc3b3b6f509b
+        uri: ngc://nim/baidu/paddleocr:h100x1-trt-fp16-uswjt0qwaa?file=metadata.json
+        checksum: blake3:893a626c5b6a795fa58deb651540c89317df1ddd06c2570300318f09815564fc
       paddle_det/1/model.plan:
-        uri: ngc://nim/baidu/paddleocr:l40sx1-trt-fp16-evboykuf0g?file=model.plan
-        checksum: blake3:48dba752d9364077ed3ddaae826dc1fc28d0713f85820a076eafa5927f1a3952
+        uri: ngc://nim/baidu/paddleocr:h100x1-trt-fp16-uswjt0qwaa?file=model.plan
+        checksum: blake3:5fddc9652b5ab976a4873e26777bdd8d5441d0eabfcb37c4f07b538b3daefd9e
       paddle_rec/1/checksums.blake3:
-        uri: ngc://nim/baidu/paddleocr:l40sx1-trt-fp16-k7vnc-ymcg?file=checksums.blake3
-        checksum: blake3:f8571548d46a4fd2eac0f559d5223a36d1a8ddc6469d330e38bf22a1945f3e23
+        uri: ngc://nim/baidu/paddleocr:h100x1-trt-fp16-nctrcxvjdg?file=checksums.blake3
+        checksum: blake3:aa5f0fbc42d6227a3154ccf30099b93e13c51c6e5f95231df587ec74ed229945
       paddle_rec/1/metadata.json:
-        uri: ngc://nim/baidu/paddleocr:l40sx1-trt-fp16-k7vnc-ymcg?file=metadata.json
-        checksum: blake3:c4679fb3139affd30b4fdc16bbefede0974265778cc52ce61564cc3b3b6f509b
+        uri: ngc://nim/baidu/paddleocr:h100x1-trt-fp16-nctrcxvjdg?file=metadata.json
+        checksum: blake3:893a626c5b6a795fa58deb651540c89317df1ddd06c2570300318f09815564fc
       paddle_rec/1/model.plan:
-        uri: ngc://nim/baidu/paddleocr:l40sx1-trt-fp16-k7vnc-ymcg?file=model.plan
-        checksum: blake3:793fda2548d745e9f4eda402325a859ac4c81a7b6f51d816a4749f96b6e1c256
-- id: 93868053f6713346c8c4f6602b6a981b18d95d6680510bf249fd5b83477bbc52
+        uri: ngc://nim/baidu/paddleocr:h100x1-trt-fp16-nctrcxvjdg?file=model.plan
+        checksum: blake3:44f38d402f397e63cad058c84e716fa2d1529c148588673f35b34941795619c8
+- id: 859ace730c899fb7b8362fe773639da57544f87584f9ed138089e85665653972
   tags:
     backend: triton
     batch_size: '32'
-    device_id: 20b0:10de
-    gpu: NVIDIA A100-SXM4-40GB
-    gpu_key: a100-sxm4-40gb
-    model_type: tensorrt
-    precision: fp16
-  workspace:
-    files:
-      paddle/1/checksums.blake3:
-        uri: ngc://nim/baidu/paddleocr:2_TRT_python_2?file=checksums.blake3
-        checksum: blake3:c9351fe2a49173300e4303bdce5890e1245fd1d33d767f32bd6b89357d74c1cd
-      paddle/1/model.py:
-        uri: ngc://nim/baidu/paddleocr:2_TRT_python_2?file=model.py
-        checksum: blake3:5fec05dfaf1f6d2e5bd97bb0d3828af95bd889e9de6be9d7ce88ca7f913babeb
-      paddle_det/1/checksums.blake3:
-        uri: ngc://nim/baidu/paddleocr:a100x1-trt-fp16-pmwetdrjua?file=checksums.blake3
-        checksum: blake3:cc22d32fd5aeb317c0903859f81ad28b82d8fdefa6781542b9d114e6eb0212f9
-      paddle_det/1/metadata.json:
-        uri: ngc://nim/baidu/paddleocr:a100x1-trt-fp16-pmwetdrjua?file=metadata.json
-        checksum: blake3:10c4c9a491278301448e2bc7e038e2a1b79ba79e657c86dd9fef8048f4579c3e
-      paddle_det/1/model.plan:
-        uri: ngc://nim/baidu/paddleocr:a100x1-trt-fp16-pmwetdrjua?file=model.plan
-        checksum: blake3:24153f35c45b6dfaed8dc4117daf2141c9caeac02a8acc1bf1a99d60dee4d76a
-      paddle_rec/1/checksums.blake3:
-        uri: ngc://nim/baidu/paddleocr:a100x1-trt-fp16-ebu61zavqq?file=checksums.blake3
-        checksum: blake3:6e3181f678cbe9a72ddbb467ba96437a60466410b1925353e9034ede007303eb
-      paddle_rec/1/metadata.json:
-        uri: ngc://nim/baidu/paddleocr:a100x1-trt-fp16-ebu61zavqq?file=metadata.json
-        checksum: blake3:10c4c9a491278301448e2bc7e038e2a1b79ba79e657c86dd9fef8048f4579c3e
-      paddle_rec/1/model.plan:
-        uri: ngc://nim/baidu/paddleocr:a100x1-trt-fp16-ebu61zavqq?file=model.plan
-        checksum: blake3:c94852ea911a0251046569da5b7ef92822caa00856d57cc065c129b00f36f79e
-- id: acba2841622c4da2050811e8c7c4bae4c16996ab61b67d68b089176524d70383
-  tags:
-    backend: triton
-    batch_size: '32'
-    device_id: 2237:10de
-    gpu: NVIDIA A10G
-    gpu_key: a10g
+    gpu: a10g
     model_type: tensorrt
     precision: fp16
   workspace:
@@ -213,13 +135,44 @@ profiles:
       paddle_rec/1/model.plan:
         uri: ngc://nim/baidu/paddleocr:a10gx1-trt-fp16-awu3xltmya?file=model.plan
         checksum: blake3:4330a703d5b6c04adcb2bc8641f1cf6cfbd0a0120e15b3689549b01ea2adc883
-- id: b6c8b6aef874d014b535faf2742d759bce6670c32b777ea8762d6264f7d30737
+- id: 90699b066c264c9533628aeb4f1814ef51e0f2f021540e3ae77181f2ef9ce9ed
   tags:
     backend: triton
     batch_size: '32'
-    device_id: 2901:10de
-    gpu: NVIDIA B200
-    gpu_key: b200
+    gpu: l40s
+    model_type: tensorrt
+    precision: fp16
+  workspace:
+    files:
+      paddle/1/checksums.blake3:
+        uri: ngc://nim/baidu/paddleocr:2_TRT_python_2?file=checksums.blake3
+        checksum: blake3:c9351fe2a49173300e4303bdce5890e1245fd1d33d767f32bd6b89357d74c1cd
+      paddle/1/model.py:
+        uri: ngc://nim/baidu/paddleocr:2_TRT_python_2?file=model.py
+        checksum: blake3:5fec05dfaf1f6d2e5bd97bb0d3828af95bd889e9de6be9d7ce88ca7f913babeb
+      paddle_det/1/checksums.blake3:
+        uri: ngc://nim/baidu/paddleocr:l40sx1-trt-fp16-evboykuf0g?file=checksums.blake3
+        checksum: blake3:9875387ccc5b5995777214de008275eaa2fa3f943b1bd7e137ec306eafc347c4
+      paddle_det/1/metadata.json:
+        uri: ngc://nim/baidu/paddleocr:l40sx1-trt-fp16-evboykuf0g?file=metadata.json
+        checksum: blake3:c4679fb3139affd30b4fdc16bbefede0974265778cc52ce61564cc3b3b6f509b
+      paddle_det/1/model.plan:
+        uri: ngc://nim/baidu/paddleocr:l40sx1-trt-fp16-evboykuf0g?file=model.plan
+        checksum: blake3:48dba752d9364077ed3ddaae826dc1fc28d0713f85820a076eafa5927f1a3952
+      paddle_rec/1/checksums.blake3:
+        uri: ngc://nim/baidu/paddleocr:l40sx1-trt-fp16-k7vnc-ymcg?file=checksums.blake3
+        checksum: blake3:f8571548d46a4fd2eac0f559d5223a36d1a8ddc6469d330e38bf22a1945f3e23
+      paddle_rec/1/metadata.json:
+        uri: ngc://nim/baidu/paddleocr:l40sx1-trt-fp16-k7vnc-ymcg?file=metadata.json
+        checksum: blake3:c4679fb3139affd30b4fdc16bbefede0974265778cc52ce61564cc3b3b6f509b
+      paddle_rec/1/model.plan:
+        uri: ngc://nim/baidu/paddleocr:l40sx1-trt-fp16-k7vnc-ymcg?file=model.plan
+        checksum: blake3:793fda2548d745e9f4eda402325a859ac4c81a7b6f51d816a4749f96b6e1c256
+- id: a7d7cc7f7236b793a7722a3f0777b0cf3a989cc3c2c34d3e66a392329e1530e7
+  tags:
+    backend: triton
+    batch_size: '32'
+    gpu: b200
     model_type: tensorrt
     precision: fp16
   workspace:
@@ -248,13 +201,11 @@ profiles:
       paddle_rec/1/model.plan:
         uri: ngc://nim/baidu/paddleocr:b200x1-trt-fp16-olfssszeza?file=model.plan
         checksum: blake3:0781dafd23335013b0677ee6d3bf1dd3f29756999b2291b8499a1b0fb5789c42
-- id: eaad888e841d6944998862e9ea19050e530701214aa6caa164047bc0fb800a69
+- id: ed0b8106aedfc536be363b6f1f0901bd4cd371ef22e640ac03fa7f4e3ed71647
   tags:
     backend: triton
     batch_size: '32'
-    device_id: 2330:10de
-    gpu: NVIDIA H100 80GB HBM3
-    gpu_key: h100-hbm3-80gb
+    gpu: l4
     model_type: tensorrt
     precision: fp16
   workspace:
@@ -266,23 +217,23 @@ profiles:
         uri: ngc://nim/baidu/paddleocr:2_TRT_python_2?file=model.py
         checksum: blake3:5fec05dfaf1f6d2e5bd97bb0d3828af95bd889e9de6be9d7ce88ca7f913babeb
       paddle_det/1/checksums.blake3:
-        uri: ngc://nim/baidu/paddleocr:h100x1-trt-fp16-uswjt0qwaa?file=checksums.blake3
-        checksum: blake3:d356a11dae9cda2e2fba4a3c35a5c4d437bd74da07a0ccbfb0a91eb9995f5167
+        uri: ngc://nim/baidu/paddleocr:l4x1-trt-fp16-fswetrkejq?file=checksums.blake3
+        checksum: blake3:7182fe285af9ab18c14b20fc6bce7aeddd73e7e8642f9fc0589e8656fb2fa99b
       paddle_det/1/metadata.json:
-        uri: ngc://nim/baidu/paddleocr:h100x1-trt-fp16-uswjt0qwaa?file=metadata.json
-        checksum: blake3:893a626c5b6a795fa58deb651540c89317df1ddd06c2570300318f09815564fc
+        uri: ngc://nim/baidu/paddleocr:l4x1-trt-fp16-fswetrkejq?file=metadata.json
+        checksum: blake3:495231929fab32c9a8fbf59778a2311c46872cfa539ea27a85bc957e2eadf77f
       paddle_det/1/model.plan:
-        uri: ngc://nim/baidu/paddleocr:h100x1-trt-fp16-uswjt0qwaa?file=model.plan
-        checksum: blake3:5fddc9652b5ab976a4873e26777bdd8d5441d0eabfcb37c4f07b538b3daefd9e
+        uri: ngc://nim/baidu/paddleocr:l4x1-trt-fp16-fswetrkejq?file=model.plan
+        checksum: blake3:fc4807600041caa7a18ce339331c9acdf60d4471288931242983ee71ac2c03dd
       paddle_rec/1/checksums.blake3:
-        uri: ngc://nim/baidu/paddleocr:h100x1-trt-fp16-nctrcxvjdg?file=checksums.blake3
-        checksum: blake3:aa5f0fbc42d6227a3154ccf30099b93e13c51c6e5f95231df587ec74ed229945
+        uri: ngc://nim/baidu/paddleocr:l4x1-trt-fp16-ymwspsdwrw?file=checksums.blake3
+        checksum: blake3:6728b540aaf942c952853ac154254133c7bb4d5d6a6f970dbee84572bc3fbca9
       paddle_rec/1/metadata.json:
-        uri: ngc://nim/baidu/paddleocr:h100x1-trt-fp16-nctrcxvjdg?file=metadata.json
-        checksum: blake3:893a626c5b6a795fa58deb651540c89317df1ddd06c2570300318f09815564fc
+        uri: ngc://nim/baidu/paddleocr:l4x1-trt-fp16-ymwspsdwrw?file=metadata.json
+        checksum: blake3:495231929fab32c9a8fbf59778a2311c46872cfa539ea27a85bc957e2eadf77f
       paddle_rec/1/model.plan:
-        uri: ngc://nim/baidu/paddleocr:h100x1-trt-fp16-nctrcxvjdg?file=model.plan
-        checksum: blake3:44f38d402f397e63cad058c84e716fa2d1529c148588673f35b34941795619c8
+        uri: ngc://nim/baidu/paddleocr:l4x1-trt-fp16-ymwspsdwrw?file=model.plan
+        checksum: blake3:337caf25c1c0ef8e5c361e44ceca10ea2f9c59aa752cbde682485773360c566a
 - id: edc693c6fccd68d266622eace04225421e353d7ce31e3b207afc5ff35124127b
   tags:
     backend: triton
@@ -308,3 +259,36 @@ profiles:
       paddle/1/rec/model.onnx:
         uri: ngc://nim/baidu/paddleocr:4_ONNX_FP16_recognizer_2?file=model.onnx
         checksum: blake3:881387d79339d4e2a9c1a836b40b5524cbc15ed463faf839807868f831fdcb8d
+- id: f93ae043aafc696a85fc58461c074397d39ec747651ca996ae470222f93b4e62
+  tags:
+    backend: triton
+    batch_size: '32'
+    gpu: a100-sxm4-40gb
+    model_type: tensorrt
+    precision: fp16
+  workspace:
+    files:
+      paddle/1/checksums.blake3:
+        uri: ngc://nim/baidu/paddleocr:2_TRT_python_2?file=checksums.blake3
+        checksum: blake3:c9351fe2a49173300e4303bdce5890e1245fd1d33d767f32bd6b89357d74c1cd
+      paddle/1/model.py:
+        uri: ngc://nim/baidu/paddleocr:2_TRT_python_2?file=model.py
+        checksum: blake3:5fec05dfaf1f6d2e5bd97bb0d3828af95bd889e9de6be9d7ce88ca7f913babeb
+      paddle_det/1/checksums.blake3:
+        uri: ngc://nim/baidu/paddleocr:a100x1-trt-fp16-pmwetdrjua?file=checksums.blake3
+        checksum: blake3:cc22d32fd5aeb317c0903859f81ad28b82d8fdefa6781542b9d114e6eb0212f9
+      paddle_det/1/metadata.json:
+        uri: ngc://nim/baidu/paddleocr:a100x1-trt-fp16-pmwetdrjua?file=metadata.json
+        checksum: blake3:10c4c9a491278301448e2bc7e038e2a1b79ba79e657c86dd9fef8048f4579c3e
+      paddle_det/1/model.plan:
+        uri: ngc://nim/baidu/paddleocr:a100x1-trt-fp16-pmwetdrjua?file=model.plan
+        checksum: blake3:24153f35c45b6dfaed8dc4117daf2141c9caeac02a8acc1bf1a99d60dee4d76a
+      paddle_rec/1/checksums.blake3:
+        uri: ngc://nim/baidu/paddleocr:a100x1-trt-fp16-ebu61zavqq?file=checksums.blake3
+        checksum: blake3:6e3181f678cbe9a72ddbb467ba96437a60466410b1925353e9034ede007303eb
+      paddle_rec/1/metadata.json:
+        uri: ngc://nim/baidu/paddleocr:a100x1-trt-fp16-ebu61zavqq?file=metadata.json
+        checksum: blake3:10c4c9a491278301448e2bc7e038e2a1b79ba79e657c86dd9fef8048f4579c3e
+      paddle_rec/1/model.plan:
+        uri: ngc://nim/baidu/paddleocr:a100x1-trt-fp16-ebu61zavqq?file=model.plan
+        checksum: blake3:c94852ea911a0251046569da5b7ef92822caa00856d57cc065c129b00f36f79e
