--- a/models-order/private/1.51.0-h2000/merge-order.yaml
+++ b/models-order/private/1.51.0-h2000/merge-order.yaml
@@ -2,6 +2,7 @@ merge_order:
   - llama-3.3-instruct.yaml
   - llama-3.3-nemotron-super-49b-v1.yaml
   - llama-3.1-nemotron-nano-v1.yaml
+  - nemotron-nano-12b-v2-vl.yaml
   - llama-3.1-instruct.yaml
   - starcoder-2.yaml
   - mistral-instruct.yaml
