--- a/models-order/public/1.55.0/merge-order.yaml
+++ b/models-order/public/1.55.0/merge-order.yaml
@@ -15,6 +15,7 @@ merge_order:
   - paddleocr.yaml
   - llama-3.2-nv-embedqa-v2.yaml
   - llama-3.2-nv-rerankqa-v2.yaml
+  - nemotron-nano-12b-v2-vl.yaml
   - riva-asr-whisper-large-v3.yaml
   - boltz2.yaml
   - gpt-oss.yaml
