--- a/models-order/public/1.55.0/merge-order.yaml
+++ b/models-order/public/1.55.0/merge-order.yaml
@@ -1,6 +1,6 @@
 merge_order:
   - llama-3.3-instruct.yaml
-  - llama-3.3-nemotron-super-49b-v1.yaml
+  - llama-3.3-nemotron-super-49b.yaml
   - llama-3.1-nemotron-nano-v1.yaml
   - llama-3.1-instruct.yaml
   - starcoder-2.yaml
