--- a/models/public/1.55.0/llama-3.3-nemotron-super-49b.yaml
+++ b/models/public/1.55.0/llama-3.3-nemotron-super-49b.yaml
@@ -4,7 +4,7 @@ models:
   modelHubID: llama-3.3-nemotron-super-49b
   category: Chatbots
   type: NGC
-  description: The Llama-3.3-Nemotron-Super-49B line represents a family of powerful Large Language Models (LLMs) specialized in following instructions, completing requests, and generating creative text. V1 is a language model that can follow instructions, complete requests, and generate creative text formats. The Llama-3.3-Nemotron-Super-49B-v1 Large Language Model (LLM) is an instruct fine-tuned version of the Llama-Nemotron. V1.5, is a significantly upgraded version of Llama-3.3-Nemotron-Super-49B-v1 and is a large language model (LLM) which is a derivative of Meta Llama-3.3-70B-Instruct (AKA the reference model).
+  description: Llama-3.3-Nemotron-Super-49B v1 and v1.5 are language models that can follow instructions, complete requests, and generate creative text formats. The Llama-3.3-Nemotron-Super-49B v1 series of Large Language Models (LLMs) are instruction-tuned versions of the Llama-Nemotron.
   requireLicense: true
   licenseAgreements:
   - label: Use Policy
