--- a/manifests/1.11.0/nim/nvidia/nemoretriever-page-elements-v2.yaml
+++ b/manifests/1.11.0/nim/nvidia/nemoretriever-page-elements-v2.yaml
@@ -1,134 +1,93 @@
 schema_version: '2.0'
 profile_selection_criteria: auto
 model: nvidia/nemoretriever-page-elements-v2
-release: 1.3.0
+release: 1.6.0
 profiles:
-- id: 26c97e9919dae5405145446f00e0189f615ce682526ec9b6da88b5138ff8097d
+- id: 09231248dff89cf8859d9206931342e468fbddfe469df56334fbe00df7fda1da
   tags:
     backend: triton
-    batch_size: '32'
-    gpu: a100-sxm4-80gb
+    compute_capability: '8.6'
     model_type: tensorrt
     precision: fp16
   workspace:
     files:
       yolox/1/checksums.blake3:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:a100x1-trt-fp16-vwtgi2gdbg?file=checksums.blake3
-        checksum: blake3:83019d8ae7b0887ebe8a8a689fd76b289ed2fa8f5e9f9af414225bb0a82c6b0f
+        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:a10gx1-trt-fp16-toixhuroha?file=checksums.blake3
+        checksum: blake3:b64dd5eec295e00940c464533a264c900facd81713ad6098f0562f031aa895b3
       yolox/1/metadata.json:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:a100x1-trt-fp16-vwtgi2gdbg?file=metadata.json
-        checksum: blake3:51535cb9f8f75c68315bf4e72ccb0b25ebc6ac71502e96149d607b809e44c722
+        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:a10gx1-trt-fp16-toixhuroha?file=metadata.json
+        checksum: blake3:f33354fd34d49a4f641f9368f5ca4a158090ba23972404127818072cd1b7344e
       yolox/1/model.plan:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:a100x1-trt-fp16-vwtgi2gdbg?file=model.plan
-        checksum: blake3:f61f405ce9747a71ce567ef79f96d213c9719018483fb55680d0a9c4ed8df1c4
-- id: 2e7da4417b1c44978e00f67823ae7ec885edb310e34c2c18464fbd6cad345065
+        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:a10gx1-trt-fp16-toixhuroha?file=model.plan
+        checksum: blake3:8d60d9f74302be4d853870f45533f036af1a857e39a684f00011d0246ca86704
+- id: 0f3b150544da8a053048c1e2a37a282b2c43f09a99253882578d12bc1f2cfca6
   tags:
     backend: triton
-    batch_size: '32'
-    gpu: h100-nvl
+    compute_capability: '10.0'
     model_type: tensorrt
     precision: fp16
   workspace:
     files:
       yolox/1/checksums.blake3:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:h100x1-trt-fp16-gu9grcql-w?file=checksums.blake3
-        checksum: blake3:78595c83752e2e32659afc9bd9d17b24fa25dc5f0e90667c669a922a7c506efe
+        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:b200x1-trt-fp16-ayukzqdapq?file=checksums.blake3
+        checksum: blake3:0ce509fe16fc13ab070889c80059e5916fd2ccdd6e91e86a696ab0ae501ce90a
       yolox/1/metadata.json:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:h100x1-trt-fp16-gu9grcql-w?file=metadata.json
-        checksum: blake3:d1ab0e6cc432e72fc3b5cf50d363e2cc3f35bc953911c15a7f03a2e47dc02598
+        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:b200x1-trt-fp16-ayukzqdapq?file=metadata.json
+        checksum: blake3:8f47780e55a3915536b11071cd7bab5733225ad77f016c96452ea91e6fed00d0
       yolox/1/model.plan:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:h100x1-trt-fp16-gu9grcql-w?file=model.plan
-        checksum: blake3:a8b11408d388e4e57cf8f5f4217feb97d2ca650afc785e91d128b2d4d835684c
-- id: 6097695b532c9abe549de9918de6b4702eda625f27b508acd7b7dcc04f38ebe1
+        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:b200x1-trt-fp16-ayukzqdapq?file=model.plan
+        checksum: blake3:ae24b7f44e62654517f6be6d1c8eb52915103e9a4f981f885df8f64e3cc5f908
+- id: 58adeef41afa742e753314ae51818e9f017f2c92ba0bfdc01befe6234703a54c
   tags:
     backend: triton
-    batch_size: '32'
-    gpu: h100-hbm3-80gb
+    compute_capability: '9.0'
     model_type: tensorrt
     precision: fp16
   workspace:
     files:
       yolox/1/checksums.blake3:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:h100x1-trt-fp16-gu9grcql-w?file=checksums.blake3
-        checksum: blake3:78595c83752e2e32659afc9bd9d17b24fa25dc5f0e90667c669a922a7c506efe
+        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:h100x1-trt-fp16-nuq3ijukrw?file=checksums.blake3
+        checksum: blake3:7f37dd071d5bf38998d217d3275ff88d61b3d658685135bc74ef717f7ace9a06
       yolox/1/metadata.json:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:h100x1-trt-fp16-gu9grcql-w?file=metadata.json
-        checksum: blake3:d1ab0e6cc432e72fc3b5cf50d363e2cc3f35bc953911c15a7f03a2e47dc02598
+        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:h100x1-trt-fp16-nuq3ijukrw?file=metadata.json
+        checksum: blake3:f520de387fe3203f1e4cbbedffeac4ef706e7b59cb21173f9232b5d8d572e6ff
       yolox/1/model.plan:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:h100x1-trt-fp16-gu9grcql-w?file=model.plan
-        checksum: blake3:a8b11408d388e4e57cf8f5f4217feb97d2ca650afc785e91d128b2d4d835684c
-- id: 859ace730c899fb7b8362fe773639da57544f87584f9ed138089e85665653972
+        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:h100x1-trt-fp16-nuq3ijukrw?file=model.plan
+        checksum: blake3:4140fde511a628e722b79a1be034376bb2e97486c73f60a58e12033663ab2f08
+- id: b4cc2f8b3d2dcf1afdcafbee8ea694c53aeee642d76f709ed0e79477b68a8dde
   tags:
     backend: triton
-    batch_size: '32'
-    gpu: a10g
+    compute_capability: '12.0'
     model_type: tensorrt
     precision: fp16
   workspace:
     files:
       yolox/1/checksums.blake3:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:a10gx1-trt-fp16-xrpnjisxaw?file=checksums.blake3
-        checksum: blake3:fce42b01fe230e2b20a5c5f952b7e3f860be972e17ef18c5b61742a0d2b2e283
+        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:rtx6000-blackwell-svx1-trt-fp16-xd1wfged5w?file=checksums.blake3
+        checksum: blake3:42ae9c5680b8d8a4c1b136894e0409b42141344a92c240c949bcc919eae4441f
       yolox/1/metadata.json:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:a10gx1-trt-fp16-xrpnjisxaw?file=metadata.json
-        checksum: blake3:08a5f619aba9118b3b5bb772c3ca95d82e0dbe086ba0612785d47a990f3fabe1
+        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:rtx6000-blackwell-svx1-trt-fp16-xd1wfged5w?file=metadata.json
+        checksum: blake3:22bcb8d0e1c2a38c8cfff1a55596bf20f6a80214ba82ed3e8e0ee4a95e2719fe
       yolox/1/model.plan:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:a10gx1-trt-fp16-xrpnjisxaw?file=model.plan
-        checksum: blake3:ce900210ad4ad80592d3f9dde87c9852c7d2e79fcda1806d3d08141a62fc2f37
-- id: 90699b066c264c9533628aeb4f1814ef51e0f2f021540e3ae77181f2ef9ce9ed
+        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:rtx6000-blackwell-svx1-trt-fp16-xd1wfged5w?file=model.plan
+        checksum: blake3:116fbeafbdd04080e8df4f5421ae4eea88666868d4192cc4ee1dabd50d0998aa
+- id: bc1487bf0ec3430f17595fff029c1bc50668344c7a30f9e5d64ee061c6e2d5fa
   tags:
     backend: triton
-    batch_size: '32'
-    gpu: l40s
+    compute_capability: '8.9'
     model_type: tensorrt
     precision: fp16
   workspace:
     files:
       yolox/1/checksums.blake3:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:l40sx1-trt-fp16-ckx59ghtpa?file=checksums.blake3
-        checksum: blake3:5b94a2d86e3a87f8a416220917c4d7eac00cba52525f553f12ac8fa6fb753eda
+        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:l40sx1-trt-fp16-qnrq36wfcw?file=checksums.blake3
+        checksum: blake3:2e8a7acf94927d7a6f80fca20d5f058b3c80031c5495ea0ae374835bc576eb2e
       yolox/1/metadata.json:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:l40sx1-trt-fp16-ckx59ghtpa?file=metadata.json
-        checksum: blake3:ae55f3723680fbb487740a25a95112ec968e9b390d5c2069fa0920d607fa612e
+        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:l40sx1-trt-fp16-qnrq36wfcw?file=metadata.json
+        checksum: blake3:ee557e61b4fb4da3fe600b1c4199d39f7a0d994102d57530155d5cc2b4da5286
       yolox/1/model.plan:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:l40sx1-trt-fp16-ckx59ghtpa?file=model.plan
-        checksum: blake3:c8c3ce649c3d5b4e8c19a09b92df42cce2197ca31331a70ddf9f40554ca36c8f
-- id: a7d7cc7f7236b793a7722a3f0777b0cf3a989cc3c2c34d3e66a392329e1530e7
-  tags:
-    backend: triton
-    batch_size: '32'
-    gpu: b200
-    model_type: tensorrt
-    precision: fp16
-  workspace:
-    files:
-      yolox/1/checksums.blake3:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:b200x1-trt-fp16-b0owuhri1a?file=checksums.blake3
-        checksum: blake3:d8618c5435fb8684b681c289855c7ccaa18edcb79dfdfa69e4936c1dca8e77c4
-      yolox/1/metadata.json:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:b200x1-trt-fp16-b0owuhri1a?file=metadata.json
-        checksum: blake3:e166bedd8b849802138fb78925461a2827de7b818239ecad5a5f1b939581513e
-      yolox/1/model.plan:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:b200x1-trt-fp16-b0owuhri1a?file=model.plan
-        checksum: blake3:24bbc4b5077437904f3179de039181cb9b6527fe865c2997e8f7653624df27b3
-- id: ed0b8106aedfc536be363b6f1f0901bd4cd371ef22e640ac03fa7f4e3ed71647
-  tags:
-    backend: triton
-    batch_size: '32'
-    gpu: l4
-    model_type: tensorrt
-    precision: fp16
-  workspace:
-    files:
-      yolox/1/checksums.blake3:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:l4x1-trt-fp16-z-e8x-oorg?file=checksums.blake3
-        checksum: blake3:05e71a863b898b15664766260783ebee9fc52d8a09bd408b54f799cc48244d0c
-      yolox/1/metadata.json:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:l4x1-trt-fp16-z-e8x-oorg?file=metadata.json
-        checksum: blake3:78bfbba74d87dad0638b5c554be30812db727bd0ebe2ce338ace01983e89ec72
-      yolox/1/model.plan:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:l4x1-trt-fp16-z-e8x-oorg?file=model.plan
-        checksum: blake3:2e79b8d21634db2f53ae4adc57c459d9d4e7c996b25abb217bbd7bad0ede36b7
+        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:l40sx1-trt-fp16-qnrq36wfcw?file=model.plan
+        checksum: blake3:238f6de641dea7421ac3cce1cb55cee2e6efa502f664ec95be32a376325ea6dd
 - id: edc693c6fccd68d266622eace04225421e353d7ce31e3b207afc5ff35124127b
   tags:
     backend: triton
@@ -145,21 +104,20 @@ profiles:
       yolox/1/model.onnx:
         uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:a100x1-onnx-fp16-wagmq6-x1q?file=model.onnx
         checksum: blake3:9ee12be18f51831f6bca9a6f15e2b294d06454d92dc3c25c4228378f2ae09372
-- id: f93ae043aafc696a85fc58461c074397d39ec747651ca996ae470222f93b4e62
+- id: f0fb2f72a66230096c40fc3307872ebb9bce69816cbfc6e2918695ca824bd284
   tags:
     backend: triton
-    batch_size: '32'
-    gpu: a100-sxm4-40gb
+    compute_capability: '8.0'
     model_type: tensorrt
     precision: fp16
   workspace:
     files:
       yolox/1/checksums.blake3:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:a100x1-trt-fp16-vwtgi2gdbg?file=checksums.blake3
-        checksum: blake3:83019d8ae7b0887ebe8a8a689fd76b289ed2fa8f5e9f9af414225bb0a82c6b0f
+        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:a100x1-trt-fp16-yukvwcfl5q?file=checksums.blake3
+        checksum: blake3:9527fd0264d8b5a85e2632485d12d788bb9b7b150932f505d67a5d5d01b4c0e4
       yolox/1/metadata.json:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:a100x1-trt-fp16-vwtgi2gdbg?file=metadata.json
-        checksum: blake3:51535cb9f8f75c68315bf4e72ccb0b25ebc6ac71502e96149d607b809e44c722
+        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:a100x1-trt-fp16-yukvwcfl5q?file=metadata.json
+        checksum: blake3:412918869569f752ce8c3a8348484db02f3643de5bf6e932b42e2edcf7c254bb
       yolox/1/model.plan:
-        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:a100x1-trt-fp16-vwtgi2gdbg?file=model.plan
-        checksum: blake3:f61f405ce9747a71ce567ef79f96d213c9719018483fb55680d0a9c4ed8df1c4
+        uri: ngc://nim/nvidia/nemoretriever-page-elements-v2:a100x1-trt-fp16-yukvwcfl5q?file=model.plan
+        checksum: blake3:98e86ca826883d32ab1b555f0c628c4875d3cbd4ccc5dc655947811d27588fa9
