Adding dummy modelCard for testing purpose
Adding dummy modelCard for testing purpose

--- a/models/public/1.55.0/boltz2.yaml
+++ b/models/public/1.55.0/boltz2.yaml
@@ -5,6 +5,7 @@ models:
   category: Biology Foundation Model
   type: NGC
   description: Boltz-2 NIM is a next-generation structural biology foundation model that shows strong performance for both structure and affinity prediction.
+  modelCard: base64encodedDummyModelCard
   requireLicense: true
   licenseAgreements:
   - label: Use Policy
