--- a/models/public/1.55.0/deepseek-r1-distill-llama.yaml
+++ b/models/public/1.55.0/deepseek-r1-distill-llama.yaml
@@ -5,6 +5,7 @@ models:
   category: Chat Assistant
   type: NGC
   description: The DeepSeek-R1-Distill-Llama-70B NIM simplifies the deployment of a distilled version of the DeepSeek-R1 series, built upon the Llama3.3-70B-Instruct architecture. This model is designed to deliver efficient performance for reasoning, math, and code tasks while maintaining high accuracy. By distilling knowledge from the larger DeepSeek-R1 model, it provides state-of-the-art performance with reduced computational requirements.
+  modelCard: base64encodedDummyModelCard
   requireLicense: true
   licenseAgreements:
   - label: Use Policy
