--- a/models/public/1.55.0/gpt-oss.yaml
+++ b/models/public/1.55.0/gpt-oss.yaml
@@ -5,6 +5,7 @@ models:
   category: Text Generation
   type: NGC
   description: The GPT-OSS NIM simplifies the deployment of the GPT-OSS-120B and GPT-OSS-20B tuned models which are optimized for language understanding, reasoning, and text generation use cases, and outperforms many of the available open source chat models on common industry benchmarks.
+  modelCard: base64encodedDummyModelCard
   requireLicense: true
   licenseAgreements:
   - label: Use Policy
