--- a/models/public/1.55.0/llama-3.1-nemotron-nano-v1.yaml
+++ b/models/public/1.55.0/llama-3.1-nemotron-nano-v1.yaml
@@ -5,6 +5,7 @@ models:
   category: Chatbots
   type: NGC
   description: Llama 3.1 Nemotron Nano 8B or 4B are the language models that can follow instructions, complete requests, and generate creative text formats.
+  modelCard: base64encodedDummyModelCard
   requireLicense: true
   licenseAgreements:
   - label: Use Policy
