--- a/models/public/1.55.0/llama-3.2-nv-embedqa-v2.yaml
+++ b/models/public/1.55.0/llama-3.2-nv-embedqa-v2.yaml
@@ -5,6 +5,7 @@ models:
   category: Text Embedding
   type: NGC
   description: The NVIDIA Retrieval QA Llama3.2 1b Embedding NIM is an embedding NIM optimized for multilingual and crosslingual text question-answering retrieval.
+  modelCard: base64encodedDummyModelCard
   requireLicense: true
   licenseAgreements:
   - label: Use Policy
