--- a/models/public/1.55.0/llama-3.2-nv-rerankqa-v2.yaml
+++ b/models/public/1.55.0/llama-3.2-nv-rerankqa-v2.yaml
@@ -5,6 +5,7 @@ models:
   category: Text Embedding
   type: NGC
   description: The NVIDIA Retrieval QA Llama 1B Reranking NIM is a NIM optimized for providing a logit score that represents how relevant a document(s) is to a given query, fine-tuned for multilingual and cross-lingual text question-answering retrieval.
+  modelCard: base64encodedDummyModelCard
   requireLicense: true
   licenseAgreements:
   - label: Use Policy
