--- a/models/public/1.55.0/mistral-instruct.yaml
+++ b/models/public/1.55.0/mistral-instruct.yaml
@@ -5,6 +5,7 @@ models:
   category: Text Generation
   type: NGC
   description: Mistral Instruct is a language model that can follow instructions, complete requests, and generate creative text formats. The Mistral Instract Large Language Model (LLM) is an instruct fine-tuned version of the Mistral.
+  modelCard: base64encodedDummyModelCard
   modelVariants:
   - variantId: Mistral 7B Instruct
     displayName: Mistral 7B Instruct
