--- a/models/public/1.55.0/nemoretriever-graphic-elements-v1.yaml
+++ b/models/public/1.55.0/nemoretriever-graphic-elements-v1.yaml
@@ -5,6 +5,7 @@ models:
   category: Object Detection
   type: NGC
   description: NVIDIA NeMo Retriever NIM for graphic elements v1 is a fine-tuned object detection model, trained specifically for detecting the elements of charts and tables in documents
+  modelCard: base64encodedDummyModelCard
   requireLicense: true
   licenseAgreements:
   - label: Use Policy
