--- a/models/public/1.55.0/nemoretriever-table-structure-v1.yaml
+++ b/models/public/1.55.0/nemoretriever-table-structure-v1.yaml
@@ -5,6 +5,7 @@ models:
   category: Object Detection
   type: NGC
   description: NVIDIA NeMo Retriever NIM for table structure v1 is a fine-tuned object detection model, trained specifically for detecting the structure of complex tables.
+  modelCard: base64encodedDummyModelCard
   requireLicense: true
   licenseAgreements:
   - label: Use Policy
