--- a/models/public/1.55.0/nemotron-nano-12b-v2-vl.yaml
+++ b/models/public/1.55.0/nemotron-nano-12b-v2-vl.yaml
@@ -5,6 +5,7 @@ models:
   category: VLM
   type: NGC
   description: The Nemotron Nano12B v2 VL model is an advanced autoregressive Visual Language Model (VLM) designed for document transcription from images and videos, outputting text in a reading order.
+  modelCard: base64encodedDummyModelCard
   requireLicense: true
   licenseAgreements:
   - label: Use Policy
