--- a/models/public/1.55.0/paddleocr.yaml
+++ b/models/public/1.55.0/paddleocr.yaml
@@ -5,6 +5,7 @@ models:
   category: Optical Character Recognition
   type: NGC
   description: PaddleOCR is an ultra lightweight Optical Character Recognition (OCR) system by Baidu. PaddleOCR supports a variety of cutting-edge algorithms related to OCR.
+  modelCard: base64encodedDummyModelCard
   requireLicense: true
   licenseAgreements:
   - label: Use Policy
