--- a/models/public/1.55.0/starcoder-2.yaml
+++ b/models/public/1.55.0/starcoder-2.yaml
@@ -5,6 +5,7 @@ models:
   category: Language Model
   type: NGC
   description: StarCoder2-7B is a language model that can follow instructions, complete requests, and generate creative text formats.
+  modelCard: base64encodedDummyModelCard
   requireLicense: true
   licenseAgreements:
   - label: Use Policy
