--- a/models/public/1.55.0/llama-3.2-instruct.yaml
+++ b/models/public/1.55.0/llama-3.2-instruct.yaml
@@ -5,6 +5,7 @@ models:
   category: Commercial and Research
   type: NGC
   description: The Meta Llama 3.2 collection of multilingual large language models (LLMs) is a collection of pre-trained and instruction-tuned generative models in 1B and 3B sizes (text in/text out).
+  modelCard: base64encodedDummyModelCard
   requireLicense: true
   licenseAgreements:
   - label: Use Policy
