--- a/models/public/1.55.0/llama-3.3-instruct.yaml
+++ b/models/public/1.55.0/llama-3.3-instruct.yaml
@@ -5,6 +5,7 @@ models:
   category: Text Generation
   type: NGC
   description: The Llama 3.3 70B-Instruct NIM simplifies the deployment of the Llama 3.3 70B instruction tuned model which is optimized for language understanding, reasoning, and text generation use cases, and outperforms many of the available open source chat models on common industry benchmarks.
+  modelCard: base64encodedDummyModelCard
   requireLicense: true
   licenseAgreements:
   - label: Use Policy
