--- a/models/public/1.55.0/llama-3.3-nemotron-super-49b.yaml
+++ b/models/public/1.55.0/llama-3.3-nemotron-super-49b.yaml
@@ -5,6 +5,7 @@ models:
   category: Chatbots
   type: NGC
   description: Llama-3.3-Nemotron-Super-49B v1 and v1.5 are language models that can follow instructions, complete requests, and generate creative text formats. The Llama-3.3-Nemotron-Super-49B v1 series of Large Language Models (LLMs) are instruction-tuned versions of the Llama-Nemotron.
+  modelCard: base64encodedDummyModelCard
   requireLicense: true
   licenseAgreements:
   - label: Use Policy
