--- a/models/public/1.55.0/mixtral-instruct.yaml
+++ b/models/public/1.55.0/mixtral-instruct.yaml
@@ -5,6 +5,7 @@ models:
   category: Text Generation
   type: NGC
   description: The Mixtral Large Language Model (LLM) is a pretrained generative Sparse Mixture of Experts model. Mixtral Instruct is a language model that can follow instructions, complete requests, and generate creative text formats. The Mixtral Instruct Large Language Model (LLM) is an instruct fine-tuned version of the Mixtral.
+  modelCard: base64encodedDummyModelCard
   modelVariants:
   - variantId: Mixtral 8x7B Instruct
     source:
