--- a/models/public/1.55.0/nemoretriever-page-elements-v2.yaml
+++ b/models/public/1.55.0/nemoretriever-page-elements-v2.yaml
@@ -5,6 +5,7 @@ models:
   category: Object Detection
   type: NGC
   description: NVIDIA NeMo Retriever NIM for page elements v2 is a fine-tuned object detection model, trained specifically for detecting charts, tables, infographics, and titles on a document page.
+  modelCard: base64encodedDummyModelCard
   requireLicense: true
   licenseAgreements:
   - label: Use Policy
