--- a/models-order/public/1.53.0_10_2/merge-order.yaml
+++ b/models-order/public/1.53.0_10_2/merge-order.yaml
@@ -1,6 +1,6 @@
 merge_order:
   - llama-3.3-instruct.yaml
-  - llama-3.3-nemotron-super-49b-v1.yaml
+  - llama-3.3-nemotron-super-49b.yaml
   - llama-3.1-nemotron-nano-v1.yaml
   - llama-3.1-instruct.yaml
   - starcoder-2.yaml
@@ -15,7 +15,6 @@ merge_order:
   - paddleocr.yaml
   - llama-3.2-nv-embedqa-v2.yaml
   - llama-3.2-nv-rerankqa-v2.yaml
-  - llama-3.2-vision-instruct.yaml
   - riva-asr-whisper-large-v3.yaml
   - boltz2.yaml
   - gpt-oss.yaml
